# article_silicon_sampling_quebec

./: .gitignore  AGENTS.md  README.md  email.md  finetuning_decisions.md  finetuning_infos_dump.md  pyproject.toml  requirements.txt
.beads/: metadata.json
data/processed/: questions.parquet  respondents.parquet
doc_calculcan/: accord_narval.md
jobs/: sft_runner.sh
notebooks/: finetune_colab.ipynb  finetune_colab_3b.ipynb
paper/: README.md
scripts/: 00_extract_codebook_pdf_to_md.py  01_build_thematic_domains.py  02_prepare_data.py  03_generate_question_embeddings.py  04_simulate_condition1.py  05_build_similarity_index.py  06_simulate_condition2.py  07_generate_finetune_dataset.py  07b_generate_finetune_dataset_4b.py  07b_generate_finetune_dataset_5.py  08_simulate_condition4.py  08_simulate_condition4a.py  README.md  download_ces_2021.R  download_models.py  finetune.py  generate_all_datasets.py  generate_colab_notebook.py  generate_sft_data.py  merge_and_push.py  modal_finetune.py  prepare_data.py  profile_step.py  setup_narval.sh  submit_sft.sh  tokenize_dataset.py  upload_dataset_hf.py
src/article_silicon_sampling_quebec/: __init__.py  rag_similarity.py  thematic_domains.json
